# Student_Assistant_18

./: .dockerignore  .gitignore  Dockerfile  main.py  package-lock.json  pyproject.toml  requirements.txt
backend/: code_loader.py  embeddings.py  model.py  prompt.py  query.py  rag_pipeline.py  response.py  vectordb.py
frontend/: package-lock.json
frontend/src/: App.css  App.js
